--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.opustech.bookvan">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,11 +11,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BookVan">
-        <activity android:name=".ProfileActivity"></activity>
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".AdminActivity" />
-        <activity android:name=".SplashScreen">
+        android:theme="@style/Theme.AppTheme"
+        tools:replace="android:theme">
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AdminActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SplashScreen"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
