--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'cc.cloudist.acplibrary:library:1.2.1'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-firestore:22.0.2'
+    implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
     //implementation 'com.github.ChilliBits:splash-screen:1.1.6'
     testImplementation 'junit:junit:4.13.1'
