--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme"
         tools:replace="android:theme">
+        <activity android:name=".ChatActivity"></activity>
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" />
