--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme"
         tools:replace="android:theme">
-        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".MessageAdminActivity"></activity>
+        <activity android:name=".ChatAdminActivity" />
+        <activity android:name=".ChatActivity" />
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" />
