--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,14 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -48,7 +49,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-firestore:22.1.0'
     implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
-    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+    implementation 'org.ocpsoft.prettytime:prettytime:5.0.0.Final'
     implementation 'com.github.simbiose:Encryption:2.0.1'
     implementation 'com.github.nisrulz:qreader:2.1.2'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
