--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,30 +31,32 @@ android {
 }
 
 dependencies {
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.zxing:core:3.3.2'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.3'
     implementation 'androidx.navigation:navigation-ui:2.3.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-firestore:22.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.ImaginativeShohag:Why-Not-Image-Carousel:v1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation platform('com.google.firebase:firebase-bom:26.4.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
-    implementation 'cc.cloudist.acplibrary:library:1.2.1'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-firestore:22.1.0'
-    implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
-    implementation 'org.ocpsoft.prettytime:prettytime:5.0.0.Final'
     implementation 'com.github.simbiose:Encryption:2.0.1'
     implementation 'com.github.nisrulz:qreader:2.1.2'
+    implementation 'cc.cloudist.acplibrary:library:1.2.1'
+    implementation 'org.ocpsoft.prettytime:prettytime:5.0.0.Final'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
-    implementation 'com.google.zxing:core:3.3.2'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
