--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.opustech.bookvan">
 
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,18 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme"
         tools:replace="android:theme">
-        <activity android:name=".MessageAdminActivity"></activity>
-        <activity android:name=".ChatAdminActivity" />
-        <activity android:name=".ChatActivity" />
-        <activity
-            android:name=".LoginActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".RegisterActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".AdminActivity"
-            android:screenOrientation="portrait" />
+        <activity android:name=".ProfileActivity"></activity>
         <activity
             android:name=".SplashScreen"
             android:screenOrientation="portrait">
@@ -35,11 +25,32 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AboutActivity"
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AdminActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ChatActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ChatAdminActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MessageAdminActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AboutActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
