--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppTheme"
-        tools:replace="android:theme">
-        <activity android:name=".transport.TransportCompanyAdminActivity"></activity>
-        <activity android:name=".transport.TransportLoginActivity" />
-        <activity android:name=".ProfileActivity" />
+        android:theme="@style/Theme.AppTheme">
+        <activity android:name=".transport.TransportCompanyAdminActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".transport.TransportLoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ProfileActivity" android:screenOrientation="portrait"/>
         <activity
             android:name=".SplashScreen"
             android:screenOrientation="portrait">
