--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'cc.cloudist.acplibrary:library:1.2.1'
     implementation 'org.ocpsoft.prettytime:prettytime:5.0.0.Final'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
+    implementation 'com.karumi:dexter:6.0.2'
 }
