--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme">
-        <activity android:name=".transport.TransportProfileActivity"></activity>
-        <activity
-            android:name=".transport.TransportCompanyAdminActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".transport.TransportLoginActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ProfileActivity"
-            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashScreen"
             android:screenOrientation="portrait">
@@ -39,22 +29,37 @@
             android:name=".RegisterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".admin.AdminActivity"
+            android:name=".ui.admin.AdminActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ChatActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".admin.ChatAdminActivity"
+            android:name=".ui.admin.ChatAdminActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".admin.MessageAdminActivity"
+            android:name=".ui.admin.MessageAdminActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AboutActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.transport.TransportProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.transport.TransportProfileAdminActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.transport.TransportEditProfileAdminActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.transport.TransportCompanyAdminActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
