--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme">
+        <activity android:name=".ScheduleActivity"></activity>
         <activity
             android:name=".SplashScreen"
             android:screenOrientation="portrait">
