--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme">
+        <activity android:name=".RentActivity"></activity>
+        <activity android:name=".BookActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key" />
 
         <activity
-            android:name="com.opustech.bookvan.SplashScreen"
+            android:name=".SplashScreen"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,46 +31,49 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.opustech.bookvan.LoginActivity"
+            android:name=".LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.RegisterActivity"
+            android:name=".RegisterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.admin.AdminActivity"
+            android:name=".ui.admin.AdminActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.user.MainActivity"
+            android:name=".ui.user.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.user.ProfileActivity"
+            android:name=".ui.user.ProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.user.ChatActivity"
+            android:name=".ui.user.ChatActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.user.ScheduleActivity"
+            android:name=".ui.user.ScheduleActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.admin.ChatAdminActivity"
+            android:name=".ui.admin.ChatAdminActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.admin.MessageAdminActivity"
+            android:name=".ui.admin.MessageAdminActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.AboutActivity"
+            android:name=".AboutActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.transport.TransportProfileActivity"
+            android:name=".ui.transport.TransportProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.transport.TransportProfileAdminActivity"
+            android:name=".ui.transport.TransportProfileAdminActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.transport.TransportEditProfileAdminActivity"
+            android:name=".ui.transport.TransportProfileAdminUserActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.opustech.bookvan.ui.transport.TransportCompanyAdminActivity"
+            android:name=".ui.transport.TransportEditProfileAdminActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.transport.TransportCompanyAdminActivity"
             android:screenOrientation="portrait" />
     </application>
 
