--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme">
-        <activity android:name=".ui.user.PartnerActivity"></activity>
-        <activity android:name=".ui.user.BookingActivity" />
-        <activity android:name=".ui.user.RentActivity" />
-        <activity android:name=".ui.user.BookActivity" />
+        <activity android:name=".ui.transport.TransportAdminBookingScannerActivity"></activity>
+        <activity android:name=".ui.transport.TransportAdminSchedulesActivity" />
+        <activity android:name=".ui.transport.TransportAdminBookingsActivity" />
+        <activity android:name=".ui.admin.AdminTripSchedulesActivity" />
+        <activity android:name=".ui.admin.AdminRentalsActivity" />
+        <activity android:name=".ui.admin.AdminBookingsActivity" />
+        <activity android:name=".ui.user.UserSchedulesActivity" />
+        <activity android:name=".ui.user.UserPartnersActivity" />
+        <activity android:name=".ui.user.UserBookingActivity" />
+        <activity android:name=".ui.user.UserRentActivity" />
+        <activity android:name=".ui.user.UserBookActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -39,43 +46,43 @@
             android:name=".RegisterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.admin.AdminActivity"
+            android:name=".ui.admin.AdminDashboardActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.user.MainActivity"
+            android:name=".ui.user.UserHomeActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.user.ProfileActivity"
+            android:name=".ui.user.UserProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.user.ChatActivity"
+            android:name=".ui.user.UserChatActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.user.ScheduleActivity"
+            android:name=".ui.user.UserTripScheduleActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.admin.ChatAdminActivity"
+            android:name=".ui.admin.AdminChatActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.admin.MessageAdminActivity"
+            android:name=".ui.admin.AdminMessageActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AboutActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.transport.TransportProfileActivity"
+            android:name=".ui.transport.TransportCompanyProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.transport.TransportProfileAdminActivity"
+            android:name=".ui.transport.TransportAdminCompanyProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.transport.TransportProfileAdminUserActivity"
+            android:name=".ui.transport.TransportAdminUserProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.transport.TransportEditProfileAdminActivity"
+            android:name=".ui.transport.TransportAdminEditCompanyProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.transport.TransportCompanyAdminActivity"
+            android:name=".ui.transport.TransportAdminDashboardActivity"
             android:screenOrientation="portrait" />
     </application>
 
