--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,6 @@ dependencies {
     implementation 'cc.cloudist.acplibrary:library:1.2.1'
     implementation 'org.ocpsoft.prettytime:prettytime:5.0.0.Final'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
-    implementation 'com.github.afreakyelf:Pdf-Viewer:Tag'
+    implementation 'com.github.afreakyelf:Pdf-Viewer:1.0.7'
     implementation 'com.karumi:dexter:6.0.2'
 }
