--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,9 @@
         <activity
             android:name=".ui.transport.TransportAdminBookingsActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.transport.TransportAdminRentalsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
