--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme">
+        <activity android:name=".ui.transport.TransportAdminBookingQRActivity"></activity>
+        <activity android:name=".ui.user.UserConfirmBookingQRActivity"></activity>
+        <activity android:name=".ui.user.UserConfirmBookingScanActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
