--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme">
-        <activity android:name=".ui.user.UserRentConversationActivity"></activity>
-        <activity android:name=".ui.transport.TransportAdminBookingQRActivity" />
-        <activity android:name=".ui.user.UserConfirmBookingQRActivity" />
-        <activity android:name=".ui.user.UserConfirmBookingScanActivity" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key" />
@@ -61,6 +56,14 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.user.UserRentActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.user.UserRentConversationActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.transport.TransportAdminBookingQRActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.user.UserConfirmBookingQRActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.user.UserConfirmBookingScanActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.user.UserBookActivity"
