--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     implementation 'com.github.SumiMakito:AwesomeQRCode:1.2.0'
     implementation 'com.github.afreakyelf:Pdf-Viewer:1.0.7'
     implementation 'com.karumi:dexter:6.0.2'
+    implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
     implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'
 }
