--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,14 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.android:facebook-login:[8.1)'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
-    implementation 'com.google.zxing:core:3.3.2'
+    implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
@@ -50,17 +52,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.ImaginativeShohag:Why-Not-Image-Carousel:v1.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.github.simbiose:Encryption:2.0.1'
     implementation 'com.github.nisrulz:qreader:2.1.2'
     implementation 'cc.cloudist.acplibrary:library:1.2.1'
-    implementation 'org.ocpsoft.prettytime:prettytime:5.0.0.Final'
+    implementation 'org.ocpsoft.prettytime:prettytime:5.0.1.Final'
     implementation 'com.github.SumiMakito:AwesomeQRCode:1.2.0'
     implementation 'com.github.afreakyelf:Pdf-Viewer:1.0.7'
-    implementation 'com.karumi:dexter:6.0.2'
+    implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
     implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
