--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.facebook.android:facebook-login:[8.1)'
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-login:5.15.3'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -42,12 +42,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-firestore:23.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-analytics'
@@ -61,9 +61,11 @@ dependencies {
     implementation 'cc.cloudist.acplibrary:library:1.2.1'
     implementation 'org.ocpsoft.prettytime:prettytime:5.0.1.Final'
     implementation 'com.github.SumiMakito:AwesomeQRCode:1.2.0'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
     implementation 'com.github.afreakyelf:Pdf-Viewer:1.0.7'
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
-    implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'
-    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
+    implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
